# ocx-services-py-svc

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  deploy.sh  generate_protos.sh  ocx-prj-workspace.code-workspace  pyproject.toml  requirements.txt  test_connection.py
.github/: SECRETS_REFERENCE.md
activity-registry/: Dockerfile  README.md  api.py  docker-compose.yml  requirements.txt  run.py  schema.sql  test_registry.py
ape/: __init__.py  ape_server.py  ape_service.py
authority/: Dockerfile  advanced_impact_estimator.py  api.py  cloudbuild.yaml  contract_generator.py  contract_runtime.py  impact_estimator.py  mock_scanner.py  pdf_report_generator.py  requirements.txt  run.py  scanner.py  schema.sql  use_case_generator.py
config/: database_config.py  governance_config.py  platform_config_store.py  settings.py
control-plane/: aocs_control.py
cvic/: __init__.py  checkpointing.py
db/: master_schema.sql
entropy/: monitor.py  requirements.txt
evidence-vault/: Dockerfile  README.md  api.py  docker-compose.yml  requirements.txt  run.py  schema.sql
examples/: crm_server.py  demo_tool.py  ocx_sdk.py
federation/: attestation_ledger.py  governance_committee.py  network_effects.py  requirements.txt  spanner_schema.sql  trust_tax.py  weighted_trust_calculator.py
gra/: __init__.py  regulatory_ai.py
integrity-engine/: verifier.py
intent-extractor/: .dockerignore  Dockerfile  main.py  requirements.txt
jury/: Dockerfile  README.md  cognitive_auditor.py  divergence_analyzer.py  grpc_server.py  jury_pool_manager.py  llm_juror.py  policy_adjuster.py  prompt_injection_classifier.py  requirements.txt  run.py  semantic_dlp_scanner.py  supabase_client.py  trust_engine.py
ledger/: Dockerfile  certificate_generator.py  immutable_ledger.py  ledger_service.py  regulator_api.py  requirements.txt  run.py  spanner_client.py  spanner_schema.sql  supabase_client.py
mcp-interface/: Dockerfile  main.py
memory-engine/: server.py
monitor/: Dockerfile  main.py  requirements.txt
ocx-core/: Dockerfile  main.py
ocx-orchestrator/: Dockerfile  docker-compose.yml  orchestrator.py  requirements.txt  tenant_schema.sql
parallel-auditing/: README.md  auditor.py  requirements.txt
process-mining/: .dockerignore  BATCH_UPLOAD.md  (+14 more)
(+190 files in other folders)
